.metadata/.plugins/org.eclipse.cdt.ui/Blinky.build.log
22:25:23 **** Build of configuration Debug for project Blinky ****
make -j9 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f407vgtx.d" -MT"Startup/startup_stm32f407vgtx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f407vgtx.o" "../Startup/startup_stm32f407vgtx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:27:9: warning: implicit declaration of function 'HAL_Init' [-Wimplicit-function-declaration]
   27 |         HAL_Init();
      |         ^~~~~~~~
../Src/main.c:29:9: warning: implicit declaration of function '__HAL_RCC_GPIOD_CLK_ENABLE' [-Wimplicit-function-declaration]
   29 |         __HAL_RCC_GPIOD_CLK_ENABLE();
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
../Src/main.c:32:9: error: unknown type name 'GPIO_InitTypeDef'
   32 |         GPIO_InitTypeDef led12_config = {
      |         ^~~~~~~~~~~~~~~~
../Src/main.c:33:13: error: 'GPIO_PIN_12' undeclared (first use in this function)
   33 |             GPIO_PIN_12,
      |             ^~~~~~~~~~~
../Src/main.c:33:13: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:34:13: error: 'MODE_OUTPUT' undeclared (first use in this function)
   34 |             MODE_OUTPUT,
      |             ^~~~~~~~~~~
../Src/main.c:34:13: warning: excess elements in scalar initializer
../Src/main.c:34:13: note: (near initialization for 'led12_config')
../Src/main.c:35:13: error: 'GPIO_NOPULL' undeclared (first use in this function)
   35 |             GPIO_NOPULL,
      |             ^~~~~~~~~~~
../Src/main.c:35:13: warning: excess elements in scalar initializer
../Src/main.c:35:13: note: (near initialization for 'led12_config')
../Src/main.c:36:13: error: 'GPIO_SPEED_FREQ_HIGH' undeclared (first use in this function)
   36 |             GPIO_SPEED_FREQ_HIGH,
      |             ^~~~~~~~~~~~~~~~~~~~
../Src/main.c:36:13: warning: excess elements in scalar initializer
../Src/main.c:36:13: note: (near initialization for 'led12_config')
../Src/main.c:37:13: error: 'ZERO' undeclared (first use in this function)
   37 |             ZERO
      |             ^~~~
../Src/main.c:37:13: warning: excess elements in scalar initializer
../Src/main.c:37:13: note: (near initialization for 'led12_config')
../Src/main.c:39:11: error: unknown type name 'GPIO_InitTypeDef'
   39 |           GPIO_InitTypeDef led13_config = {
      |           ^~~~~~~~~~~~~~~~
../Src/main.c:40:13: error: 'GPIO_PIN_13' undeclared (first use in this function)
   40 |             GPIO_PIN_13,
      |             ^~~~~~~~~~~
../Src/main.c:41:13: warning: excess elements in scalar initializer
   41 |             MODE_OUTPUT,
      |             ^~~~~~~~~~~
../Src/main.c:41:13: note: (near initialization for 'led13_config')
../Src/main.c:42:13: warning: excess elements in scalar initializer
   42 |             GPIO_NOPULL,
      |             ^~~~~~~~~~~
../Src/main.c:42:13: note: (near initialization for 'led13_config')
../Src/main.c:43:13: warning: excess elements in scalar initializer
   43 |             GPIO_SPEED_FREQ_HIGH,
      |             ^~~~~~~~~~~~~~~~~~~~
../Src/main.c:43:13: note: (near initialization for 'led13_config')
../Src/main.c:44:13: warning: excess elements in scalar initializer
   44 |             ZERO
      |             ^~~~
../Src/main.c:44:13: note: (near initialization for 'led13_config')
../Src/main.c:47:11: warning: implicit declaration of function 'HAL_GPIO_Init' [-Wimplicit-function-declaration]
   47 |           HAL_GPIO_Init(GPIOD, &led12_config);
      |           ^~~~~~~~~~~~~
../Src/main.c:47:25: error: 'GPIOD' undeclared (first use in this function)
   47 |           HAL_GPIO_Init(GPIOD, &led12_config);
      |                         ^~~~~
../Src/main.c:52:11: warning: implicit declaration of function 'SystemClock_Config' [-Wimplicit-function-declaration]
   52 |           SystemClock_Config();
      |           ^~~~~~~~~~~~~~~~~~
../Src/main.c:57:21: warning: implicit declaration of function 'HAL_GPIO_WritePin' [-Wimplicit-function-declaration]
   57 |                     HAL_GPIO_WritePin(GPIOD, led12_config.Pin, GPIO_PIN_SET);
      |                     ^~~~~~~~~~~~~~~~~
../Src/main.c:57:58: error: request for member 'Pin' in something not a structure or union
   57 |                     HAL_GPIO_WritePin(GPIOD, led12_config.Pin, GPIO_PIN_SET);
      |                                                          ^
../Src/main.c:57:64: error: 'GPIO_PIN_SET' undeclared (first use in this function)
   57 |                     HAL_GPIO_WritePin(GPIOD, led12_config.Pin, GPIO_PIN_SET);
      |                                                                ^~~~~~~~~~~~
../Src/main.c:60:21: warning: implicit declaration of function 'HAL_Delay' [-Wimplicit-function-declaration]
   60 |                     HAL_Delay(DELAY_TIME);
      |                     ^~~~~~~~~
../Src/main.c:60:31: error: 'DELAY_TIME' undeclared (first use in this function)
   60 |                     HAL_Delay(DELAY_TIME);
      |                               ^~~~~~~~~~
../Src/main.c:63:58: error: request for member 'Pin' in something not a structure or union
   63 |                     HAL_GPIO_WritePin(GPIOD, led12_config.Pin, GPIO_PIN_RESET);
      |                                                          ^
../Src/main.c:63:64: error: 'GPIO_PIN_RESET' undeclared (first use in this function)
   63 |                     HAL_GPIO_WritePin(GPIOD, led12_config.Pin, GPIO_PIN_RESET);
      |                                                                ^~~~~~~~~~~~~~
../Src/main.c:66:58: error: request for member 'Pin' in something not a structure or union
   66 |                     HAL_GPIO_WritePin(GPIOD, led13_config.Pin, GPIO_PIN_SET);
      |                                                          ^
../Src/main.c:72:58: error: request for member 'Pin' in something not a structure or union
   72 |                     HAL_GPIO_WritePin(GPIOD, led13_config.Pin, GPIO_PIN_RESET);
      |                                                          ^
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j9 all" terminated with exit code 2. Build might be incomplete.

22:25:23 Build Failed. 18 errors, 14 warnings. (took 368ms)

